Fri Mar 30 16:35:27 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the WHOIS and IDENTIFY send reply function to really
	  check whether to send list or just one entry.  Affected file
	  silcd/command.c.

	* Cleaned up the LEAVE command's channel key distribution.  The
	  affected file silcd/command.c.

	* Changed CMODE_CHANGE's <Client ID> to <ID Payload> as server
	  can enforce the channel mode as well.  In that case the ID
	  includes the ID of the server.  The code now enforces the
	  mode change if the router have different mode than the server.

	* The notify client operation with CMODE_CHANGE notify can now
	  return NULL client_entry pointer if the CMODE was not changed
	  by client.  Application must check for this.

	* Added <Server ID> argument to INFO command to support server
	  info fetching by Server ID.

	* Added silc_server_announce_get_channel_users to get assembled
	  packets of channel users of the specified channel.  Affected
	  file silcd/server.[ch].

	* Fixed bug in CHANNEL_CHANGE notify in the server.  The new ID
	  was freed underneath the ID Cache.

	* Re-announce clients when the server received CHANNEL_CHANGE
	  notify from the router.  Affected file silcd/packet_send.c.

Thu Mar 29 19:10:28 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed a fatal bug when client does /join 1 2 3 4 5 6 the server
	  crashed since it did not handle the fact that there is no cipher
	  called "3" and didn't check the error condition.  Now fixed.

	* Added SILC_MESSAGE_FLAG_REQUEST message flag as generic request
	  flag.  It can be used to send message requests.

Thu Mar 29 12:26:25 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Implemented the RESTART command in the client.

	* Added SILC_MESSAGE_FLAG_NOTICE message flag for informational
	  notice type messages.  Added notice printing to the user
	  interface.

	* The channel keys are not re-generated if the channel's mode